# raylib_ecs_test

./: CMakeLists.txt  LICENSE  README.md
src/: Entity.h  EntityRegistry.cpp  EntityRegistry.h
src/components/: CollisionComponent.cpp  CollisionComponent.h  KeyInputComponent.cpp  KeyInputComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.h
src/ecs/components/: CollisionComponent.h  KeyInputComponent.h  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
src/ecs/entities/: Entity.h  EntityRegistry.cpp  EntityRegistry.h
src/game/factories/: PlayerFactory.cpp  PlayerFactory.h
